--- a/index.html
+++ b/index.html
@@ -32,31 +32,24 @@
         </div>
         <div class="mob-header">
             <div class="mob-header-left">
+                <!-- Overlay for disabling background interaction -->
+                <div id="overlay" class="overlay"></div>
                 <!-- Drawer content -->
                 <div class="drawer" id="drawer">
                     <div class="drawer-header">
-                        <div>Filters</div>
+                        <div>Menu</div>
                         <a class="drawer-close" id="drawerClose">×</a>
                     </div>
 
                     <div class="drawer-content">
-                        <div class="underline">Clear All</div>
-                        <div class="header-drawer-splitter"></div>
-                        <div class="header-drawer-filter">
-                            <div class="filter-subheader-title">Categories</div>
-                            <input type="checkbox" id="jewellery" name="jewellery" value="jewellery">
-                            <label for="jewellery"> Jewellery</label><br>
-                            <input type="checkbox" id="electronics" name="electronics" value="electronics">
-                            <label for="electronics"> Electronics</label><br>
-                            <input type="checkbox" id="menClothing" name="menClothing" value="menClothing">
-                            <label for="menClothing"> Men's Clothing</label><br>
-                            <input type="checkbox" id="womenClothing" name="womenClothing" value="womenClothing">
-                            <label for="womenClothing"> Women's Clothing</label><br>
+                        <div class="header-drawer-menu">
+                            <label onclick="loadContent('home')">Home</label>
+                            <label onclick="loadContent('women')">Women</label>
+                            <label onclick="loadContent('men')">Men</label>
+                            <label onclick="loadContent('smart-gear')">Smart Gear</label>
+                            <label onclick="loadContent('accessories')">Accessories</label>
                         </div>
                         <div class="header-drawer-splitter"></div>
-                        <div class="see-results-products">
-                            <a id="see-results">See Results</a>
-                        </div>
                     </div>
 
                 </div>
@@ -107,13 +100,17 @@
                         <div class="men-left-splitter"></div>
                         <div class="men-filter">
                             <div class="filter-subheader-title">Categories</div>
-                            <input type="checkbox" id="jewellery" name="jewellery" value="jewelery" class="filterCheckbox">
+                            <input type="checkbox" id="jewellery" name="jewellery" value="jewelery"
+                                class="filterCheckbox">
                             <label for="jewellery"> Jewellery</label><br>
-                            <input type="checkbox" id="electronics" name="electronics" value="electronics" class="filterCheckbox">
+                            <input type="checkbox" id="electronics" name="electronics" value="electronics"
+                                class="filterCheckbox">
                             <label for="electronics"> Electronics</label><br>
-                            <input type="checkbox" id="menClothing" name="menClothing" value="men's clothing" class="filterCheckbox">
+                            <input type="checkbox" id="menClothing" name="menClothing" value="men's clothing"
+                                class="filterCheckbox">
                             <label for="menClothing"> Men's Clothing</label><br>
-                            <input type="checkbox" id="womenClothing" name="womenClothing" value="women's clothing" class="filterCheckbox">
+                            <input type="checkbox" id="womenClothing" name="womenClothing" value="women's clothing"
+                                class="filterCheckbox">
                             <label for="womenClothing"> Women's Clothing</label><br>
                         </div>
                         <div class="men-left-splitter"></div>
@@ -122,7 +119,8 @@
                         <div class="men-right-topbar">
                             <div class="result-count">0 Results</div>
                             <div class="search-row">
-                                <input type="text" id="menSearch" class="men-search menSearchInput" placeholder="Search" />
+                                <input type="text" id="menSearch" class="men-search menSearchInput"
+                                    placeholder="Search" />
                             </div>
                             <div class="men-sort">
                                 <label for="sort-select">Sort by:</label>
@@ -138,9 +136,57 @@
                         <div class="mob-men-topbar">
                             <div class="mob-men-path">Clothing / Men's / Outerwear</div>
                             <div class="mob-filter-sort">
+                                <!-- Modal Structure -->
+                                <div id="filterModal" class="modal">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <div>Filters</div>
+                                            <div class="modal-close" id="modalClose">&times;</div>
+                                        </div>
+
+                                        <div class="modal-header-splitter"></div>
+                                        <div class="modal-filter-content men-filter">
+                                            <div class="filter-subheader-title">Categories</div>
+                                            <input type="checkbox" id="jewellery" name="jewellery" value="jewelery"
+                                                class="filterCheckbox">
+                                            <label for="jewellery"> Jewellery</label><br>
+                                            <input type="checkbox" id="electronics" name="electronics"
+                                                value="electronics" class="filterCheckbox">
+                                            <label for="electronics"> Electronics</label><br>
+                                            <input type="checkbox" id="menClothing" name="menClothing"
+                                                value="men's clothing" class="filterCheckbox">
+                                            <label for="menClothing"> Men's Clothing</label><br>
+                                            <input type="checkbox" id="womenClothing" name="womenClothing"
+                                                value="women's clothing" class="filterCheckbox">
+                                            <label for="womenClothing"> Women's Clothing</label><br>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="mob-filter">
                                     <img class="mob-filter-img" src="./assets/images/sliders.svg">
                                     <div>Filter Results</div>
+                                </div>
+                                <!-- Sort Modal -->
+                                <div id="sortModal" class="modal">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <div>Sort Products</div>
+                                            <div class="modal-close" id="sortModalClose">&times;</div>
+                                        </div>
+                                        <div class="modal-header-splitter"></div>
+                                        <div class="modal-filter-content">
+                                            <input type="radio" id="sort-default" name="sort" value="default" checked>
+                                            <label for="sort-default">Default</label><br>
+                                            <input type="radio" id="sort-price-asc" name="sort" value="price-asc">
+                                            <label for="sort-price-asc">Price: Low to High</label><br>
+                                            <input type="radio" id="sort-price-desc" name="sort" value="price-desc">
+                                            <label for="sort-price-desc">Price: High to Low</label><br>
+                                            <input type="radio" id="sort-name-asc" name="sort" value="name-asc">
+                                            <label for="sort-name-asc">Name: A to Z</label><br>
+                                            <input type="radio" id="sort-name-desc" name="sort" value="name-desc">
+                                            <label for="sort-name-desc">Name: Z to A</label><br>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="mob-sort">
                                     <img class="mob-sort-img" src="./assets/images/arrow-up.svg">
@@ -149,7 +195,8 @@
                                 </div>
                             </div>
                             <div class="mob-search-row">
-                                <input type="text" id="menSearch" class="men-search-input menSearchInput" placeholder="Search" />
+                                <input type="text" id="menSearchMobile" class="men-search-input menSearchInput"
+                                    placeholder="Search" />
                             </div>
                         </div>
                         <div id="loader" class="loader"></div>
